--- a/TTools/TTools/Themes/Zh_CN.xaml
+++ b/TTools/TTools/Themes/Zh_CN.xaml
@@ -4,5 +4,9 @@
     <system:String x:Key="SystemMainHomeContent">主页</system:String>
     <system:String x:Key="SystemContent">系统信息</system:String>
     <system:String x:Key="TxtContent">文本操作</system:String>
-   
+    <system:String x:Key="AddGpedit">开启组策略</system:String>
+    <system:String x:Key="CloseUAC">关闭UAC</system:String>
+    <system:String x:Key="OpenUAC">打开UAC</system:String>
+    <system:String x:Key="DisableSwipe">禁用屏幕上滑</system:String>
+    <system:String x:Key="EnableSwipe">禁用屏幕上滑</system:String>
 </ResourceDictionary>
