--- a/TTools/TTools/Views/JsonView.xaml
+++ b/TTools/TTools/Views/JsonView.xaml
@@ -6,15 +6,15 @@
              xmlns:local="clr-namespace:TTools.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" DataContext="{Binding Json,Source={StaticResource Locator}}">
-    <Grid>
+    <Grid Background="Transparent">
 
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBox Margin="5" TextWrapping="WrapWithOverflow" AcceptsReturn="True" Text="{Binding SourceText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
-        <TextBox BorderThickness="0" Grid.Row="1" Margin="5" Text="{Binding ErrorText,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" TextWrapping="WrapWithOverflow" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
+        <TextBox Background="Transparent" Margin="5" TextWrapping="WrapWithOverflow" AcceptsReturn="True" Text="{Binding SourceText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>
+        <TextBox Background="Transparent" BorderThickness="0" Grid.Row="1" Margin="5" Text="{Binding ErrorText,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" TextWrapping="WrapWithOverflow" IsReadOnly="True" IsReadOnlyCaretVisible="True"/>
         <!--<TextBox Margin="5" TextWrapping="Wrap" Grid.Column="1" Text="{Binding TargetText,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"></TextBox>-->
         <WrapPanel Grid.Row="2" Grid.ColumnSpan="2" Margin="5">
             <Button Style="{StaticResource CommonButtonStyle}" Command="{Binding CheckCommand}" Content="校验格式" Height="30" MinWidth="100"></Button>
